<resources>
    <string name="app_name">Figuras</string>
    <string name="Cuadro">Cuadro</string>
    <string name="Circulo">Circulo</string>
    <string name="Triangulo">Triangulo</string>
    <string name="Cubo">Cubo</string>
    <string name="lado">Lado:</string>
    <string name="lado2">Lado2:</string>
    <string name="lado3">Lado3:</string>
    <string name="radio">Radio:</string>
    <string name="base">Base:</string>
    <string name="altura">Altura:</string>
    <string name="calcular">Calcular:</string>
</resources>
