<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.simonzc3.figuras.MainActivity">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rCuadro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Cuadro"
            android:onClick="cuadro"/>

        <RadioButton
            android:id="@+id/rCirculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Circulo"
            android:onClick="circulo"/>

        <RadioButton
            android:id="@+id/rTriangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Triangulo"
            android:onClick="triangulo"/>

        <RadioButton
            android:id="@+id/rCubo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cubo"
            android:onClick="cubo"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/lado"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/eLado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvRadio"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/radio"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eRadio"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tLado3"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/lado3"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/eLado3"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tomato"
                android:onClick="calcular"
                android:text="@string/calcular"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
